--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                             Submissions to the workshop are <b>single</b>-blind (author names and affiliations should be listed). 
                             <b>A team will have a guaranteed opportunity for an in-person oral/poster presentation if the team ranks in top-5 in any one of the 5 tracks.</b>
                             Other submissions will be evaluated by a committee based on their novelty and insights. 
-                            The deadline for the submissions is <ins style="color: red;">August 2, 2024</ins> (Anywhere on Earth time).
+                            The deadline for the submissions is <ins style="color: red;"><del> August 2, 2024 </del> August 4, 2024</ins> (Anywhere on Earth time).
                             Accepted submissions will be notified latest by August 6, 2024. 
                             Please note that the KDD Cup workshop will have <b>no proceedings</b> and the authors retain <b>full rights</b> to submit or post the paper at any other venue.
                         <!-- </p> -->
@@ -400,7 +400,7 @@
                                 <a class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                       <h5 class="mb-1"><span><i class="fas fa-book" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Paper Submission Deadline</h5>
-                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp; August 2, 2024 (AoE Time)</h5>
+                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp; <del>August 2, 2024 </del> August 4, 2024(AoE Time)</h5>
                                     </div>
                                 </a>
                                 <a class="list-group-item list-group-item-action">
