--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                                   </div>
                                   <p class="mb-1">
                                     <ul>
-                                      <li> <b>Team: </b> TBD
-                                      <br> <b>Title</b>: <a href="https://amazon-kddcup24.github.io" style="color: black;">TBD</a>  
+                                      <li> <b>Team: </b> Team_NVIDIA
+                                      <br> <b>Title</b>: Winning Amazon KDD Cup'24<a href="https://openreview.net/pdf?id=sv0E1mBhu8" style="color: black;">TBD</a>  
                                         <br><b>Time: </b> TBD
                                       </li>
                                     </ul>
