--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                   <p class="mb-1">
                                     <ul>
                                       <li> <b>Team: </b> Team_NVIDIA
-                                      <br> <b>Title</b>: Winning Amazon KDD Cup'24<a href="https://openreview.net/pdf?id=sv0E1mBhu8" style="color: black;">TBD</a>  
+                                      <br> <b>Title</b>: <a href="https://openreview.net/pdf?id=sv0E1mBhu8" style="color: black;">Winning Amazon KDD Cup'24</a>  
                                         <br><b>Time: </b> TBD
                                       </li>
                                     </ul>
