--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                                   </p>
                                     <p class="mb-1">
                                         <ul>
-                                          <li><b>Team:</b> TBD  
-                                          <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;"> TBD </a>
+                                          <li><b>Team:</b> AML_LabCityU
+                                          <br><b>Title:</b> <a href="https://openreview.net/pdf?id=OEjXPwR7aE" style="color: black;"> Second Place Overall Solution for Amazon KDD Cup 2024 </a>
                                           <br><b>Time:</b> TBD  
                                           </li>
                                         </ul>
