--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
                                     <p class="mb-1">
                                         <ul>
-                                          <li><b>Team:</b> TBD
-                                          <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;">TBD </a> 
+                                          <li><b>Team:</b> shimmering_as_the_stars
+                                          <br><b>Title:</b> <a href="https://openreview.net/pdf?id=6cbeohZLxS" style="color: black;"> LLaSA: Large Languageand E-Commerce Shopping Assistant </a> 
                                           <br><b>Time:</b> TBD
                                           </li>
                                         </ul>
