--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                                     </p>
                                   <p class="mb-1">
                                     <ul>
-                                      <li><b>Team:</b> TBD
-                                      <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;">TBD </a> 
+                                      <li><b>Team:</b> CM_RLLM
+                                      <br><b>Title:</b> <a href="https://openreview.net/pdf?id=UfSqvcyUPJ" style="color: black;">Tailoring LLMs for Online Shopping: A Strategy for Multi-Task Learning and Domain-Specific Performance Enhancement </a> 
                                       <br><b>Time: </b> TBD
                                       </li>
                                       <br>
