--- a/index.html
+++ b/index.html
@@ -224,11 +224,13 @@
                         <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup">https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup</a> 
                           
                             <a class="list-group-item list-group-item-action">
-                                <h6>TBD</h6>
-                                &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Task 1</span>
-                                &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Task 2</span> 
-                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 3</span><br>                                
-                                Authors: TBD                             
+                                <h6>Winning Amazon KDD Cup'24</h6>
+                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 1</span>
+                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 2</span> 
+	                        &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 3</span> 
+                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 4</span> 
+                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 5</span><br>                                
+                                Authors: Chris Deotte, Ivan Sorokin, Ahmet Erdem, Benedikt Schifferer, Gilberto Titericz Jr, Simou Jegou,                       
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
                                     <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
