--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                     <p class="mb-1">
                                         <ul>
                                           <li><b>Team:</b> shimmering_as_the_stars
-                                          <br><b>Title:</b> <a href="https://openreview.net/pdf?id=6cbeohZLxS" style="color: black;"> LLaSA: Large Languageand E-Commerce Shopping Assistant </a> 
+                                          <br><b>Title:</b> <a href="https://openreview.net/pdf?id=6cbeohZLxS" style="color: black;"> LLaSA: Large Language and E-Commerce Shopping Assistant </a> 
                                           <br><b>Time:</b> TBD
                                           </li>
                                         </ul>
@@ -232,20 +232,23 @@
                                 &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 5</span><br>                                
                                 Authors: Chris Deotte, Ivan Sorokin, Ahmet Erdem, Benedikt Schifferer, Gilberto Titericz Jr, Simou Jegou,                       
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=sv0E1mBhu8" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>      <br> 
                             <a class="list-group-item list-group-item-action ">
-                                <h6>TBD</h6>
-                                &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Task 1</span> 
-                                &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Task 2</span> <br>
-                                Authors: TBD                           
+                                <h6>Second Place Overall Solution for Amazon KDD Cup 2024</h6>
+                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 1</span>
+                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 2</span> 
+	                        &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 3</span> 
+                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 4</span> 
+                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 5</span> <br>
+                                Authors: Pengyue Jia, Jingtong Gao, Xiaopeng Li, Zixuan Wang, Yiyao Jin, Xiangyu Zhao                           
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=OEjXPwR7aE" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>        <br>
                             <a class="list-group-item list-group-item-action ">
-                                <h6>A TBD</h6>
+                                <h6>LLaSA: Large Language and E-Commerce Shopping Assistant</h6>
                                 &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 2</span><br>                                
                                 Authors: TBD
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
