--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
                             </a>      <br> 
                             <a class="list-group-item list-group-item-action ">
                                 <h6>Second Place Overall Solution for Amazon KDD Cup 2024</h6>
-                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 1</span>
-                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 2</span> 
-	                        &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 3</span> 
-                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 4</span> 
-                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Track 5</span> <br>
+                                &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Track 1</span>
+                                &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Track 2</span> 
+	                        &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Track 3</span> 
+                                &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Track 4</span> 
+                                &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Track 5</span> <br>
                                 Authors: Pengyue Jia, Jingtong Gao, Xiaopeng Li, Zixuan Wang, Yiyao Jin, Xiangyu Zhao                           
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
                                     <a href="https://openreview.net/pdf?id=OEjXPwR7aE" class="btn btn-secondary" role="button" target="_blank">Paper</a>
