--- a/index.html
+++ b/index.html
@@ -249,8 +249,9 @@
                             </a>        <br>
                             <a class="list-group-item list-group-item-action ">
                                 <h6>LLaSA: Large Language and E-Commerce Shopping Assistant</h6>
-                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 2</span><br>                                
-                                Authors: TBD
+                                &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Track 1</span>
+				&nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Track 4</span><br>                                
+                                Authors: Shuo Zhang, Boci Peng, Xinping Zhao, Boren Hu, Yun Zhu, Yanjia Zeng, Xuming Hu
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
                                     <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
