--- a/index.html
+++ b/index.html
@@ -253,15 +253,15 @@
 				&nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Track 4</span><br>                                
                                 Authors: Shuo Zhang, Boci Peng, Xinping Zhao, Boren Hu, Yun Zhu, Yanjia Zeng, Xuming Hu
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=6cbeohZLxS" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>          <br>                                                
                             <a class="list-group-item list-group-item-action ">
-                                <h6>TBD</h6>
-                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 3</span><br>                                
+                                <h6>Tailoring LLMs for Online Shopping: A Strategy for Multi-Task Learning and Domain-Specific Performance Enhancement </h6>
+                                &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Track 5</span><br>                                
                                 Authors: TBD.                                                             
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=UfSqvcyUPJ" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>      <br>
                             <a class="list-group-item list-group-item-action ">
