--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             <a class="list-group-item list-group-item-action ">
                                 <h6>Tailoring LLMs for Online Shopping: A Strategy for Multi-Task Learning and Domain-Specific Performance Enhancement </h6>
                                 &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Track 5</span><br>                                
-                                Authors: TBD.                                                             
+                                Authors: Liu Yankai, Hao Yifan, Guo Ruipu, Cui Zhaojun                                                            
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
                                     <a href="https://openreview.net/pdf?id=UfSqvcyUPJ" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
