--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                                       <br><b>Time: </b> TBD
                                       </li>
                                       <br>
-                                      <li><b>Team:</b> TBD
-                                      <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;"> TBD</a>
+                                      <li><b>Team:</b> ZJU_AI4H
+                                      <br><b>Title:</b> <a href="https://openreview.net/pdf?id=8x4In4No3q" style="color: black;"> EC-Guide: A Comprehensive E-Commerce Guide for Instruction Tuning and Quantization by ZJU-AI4H</a>
                                       <br><b>Time: </b> TBD
                                       </li>
                                       <br>
@@ -265,11 +265,11 @@
                                 </div>
                             </a>      <br>
                             <a class="list-group-item list-group-item-action ">
-                                <h6>TBD</h6>
-                                &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Task 1</span><br>
-                                Authors: TBD.                              
+                                <h6>EC-Guide: A Comprehensive E-Commerce Guide for Instruction Tuning and Quantization by ZJU-AI4H</h6>
+                                &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Track 2</span> <br>
+                                Authors: Zhaopeng Feng, Zijie Meng, Zuozhu Liu.                              
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=8x4In4No3q" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>          <br>                 
                             <a class="list-group-item list-group-item-action ">
