--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                                       <br><b>Time: </b> TBD
                                       </li>
                                       <br>
-                                      <li><b>Team:</b> TBD
-                                      <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;"> TBD </a> 
+                                      <li><b>Team:</b> BMI_DLUT
+                                      <br><b>Title:</b> <a href="https://openreview.net/pdf?id=fbX9XN3qmS" style="color: black;"> Enhancing User Behavior Alignment by Input-Level Model Cooperation and Model-Level Parameter Optimization </a> 
                                       <br><b>Time: </b> TBD
                                       </li>                                                                            
                                     </ul>
@@ -273,11 +273,11 @@
                                 </div>
                             </a>          <br>                 
                             <a class="list-group-item list-group-item-action ">
-                                <h6>TBD</h6>
-                                &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 3</span><br>                                
-                                Authors: TBD            
+                                <h6>Enhancing User Behavior Alignment by Input-Level Model Cooperation and Model-Level Parameter Optimization</h6>
+                                &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Track 3</span><br>                                
+                                Authors: Yingyi Zhang, Zhipeng Li, Zhewei Li, Xianneng Li            
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=fbX9XN3qmS" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>      <br>                     
                             <a class="list-group-item list-group-item-action ">
