--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <h2 style="text-align: center;">ACCEPTED PAPERS</h2>
                         <div class="list-group list-group-flush">
 				
-                          In total, we have accepted [TBD] submissions including [TBD] oral presentations and [TBD] poster presentationss. The accepted submission are publicly available at OpenReview page:  
+                          In total, we have accepted 9 submissions including 6 oral presentations and 3 poster presentationss. The accepted submission are publicly available at OpenReview page:  
                         <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup">https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup</a> 
                           
                             <a class="list-group-item list-group-item-action">
@@ -281,24 +281,24 @@
                                 </div>
                             </a>      <br>                     
                             <a class="list-group-item list-group-item-action ">
-                                <h6>TBD</h6>
-                                Authors: TBD.                              
+                                <h6> Fine-Tuning Large Language Models for Multitasking in Online Shopping Using Synthetic Data</h6>
+                                Authors: Fernando Sebastián Huerta, Carla Martín Monteso, Carlos de Leguina León, Leyre Sánchez Viñuela, Julián Rojo García, Rubén Sordo López, Roberto Lara Martin.                              
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=0RXhLJnGxx" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>        <br>                   
                             <a class="list-group-item list-group-item-action">
-                                <h6>TBD</h6>
-                                Authors: TBD.                          
+                                <h6>More diverse more adaptive: Comprehensive Multi-task Learning for Improved LLM Domain Adaptation in E-commerce</h6>
+                                Authors: Piao Tong, Pei Tang, Zhipeng Zhang, Jiaqi Li, Qiao Liu, Zufeng Wu.                          
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=1c0Ddy0VjH" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>      <br>                     
                             <a class="list-group-item list-group-item-action">
-                                <h6>TBD</h6>
-                                Authors: TBD.                           
+                                <h6>Optimizing Few-Shot Learning: From Static to Adaptive in Qwen2-7B</h6>
+                                Authors: Wenhao Liu, Tianxing Bu, Erchen Yu, Dailin Li, Ding Ai, Zhenyi Lu, Haoran Luo.                           
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://openreview.net/pdf?id=RQG53KDfhG" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>                                                    
                             <a class="list-group-item list-group-item-action">
