--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                             <a class="list-group-item list-group-item-action ">
                                 <h6>Enhancing User Behavior Alignment by Input-Level Model Cooperation and Model-Level Parameter Optimization</h6>
                                 &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Track 3</span><br>                                
-                                Authors: Yingyi Zhang, Zhipeng Li, Zhewei Li, Xianneng Li            
+                                Authors: Yingyi Zhang, Zhipeng Li, Zhewei Zhi, Xianneng Li            
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
                                     <a href="https://openreview.net/pdf?id=fbX9XN3qmS" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
