--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                     <ul>
                                       <li> <b>Team: </b> Team_NVIDIA
                                       <br> <b>Title</b>: <a href="https://openreview.net/pdf?id=sv0E1mBhu8" style="color: black;">Winning Amazon KDD Cup'24</a>  
-                                        <br><b>Time: </b> TBD
+                                        <br><b>Time: </b> 14:00 - 14:25
                                       </li>
                                     </ul>
                                   </p>
@@ -159,7 +159,7 @@
                                         <ul>
                                           <li><b>Team:</b> AML_LabCityU
                                           <br><b>Title:</b> <a href="https://openreview.net/pdf?id=OEjXPwR7aE" style="color: black;"> Second Place Overall Solution for Amazon KDD Cup 2024 </a>
-                                          <br><b>Time:</b> TBD  
+                                          <br><b>Time:</b> 14:25 - 14:50
                                           </li>
                                         </ul>
                                     </p>
@@ -168,26 +168,30 @@
                                         <ul>
                                           <li><b>Team:</b> shimmering_as_the_stars
                                           <br><b>Title:</b> <a href="https://openreview.net/pdf?id=6cbeohZLxS" style="color: black;"> LLaSA: Large Language and E-Commerce Shopping Assistant </a> 
-                                          <br><b>Time:</b> TBD
+                                          <br><b>Time:</b> 14:50 - 15:00 (Video)
                                           </li>
                                         </ul>
                                     </p>
                                   <p class="mb-1">
                                     <ul>
-                                      <li><b>Team:</b> CM_RLLM
-                                      <br><b>Title:</b> <a href="https://openreview.net/pdf?id=UfSqvcyUPJ" style="color: black;">Tailoring LLMs for Online Shopping: A Strategy for Multi-Task Learning and Domain-Specific Performance Enhancement </a> 
-                                      <br><b>Time: </b> TBD
-                                      </li>
-                                      <br>
-                                      <li><b>Team:</b> ZJU_AI4H
-                                      <br><b>Title:</b> <a href="https://openreview.net/pdf?id=8x4In4No3q" style="color: black;"> EC-Guide: A Comprehensive E-Commerce Guide for Instruction Tuning and Quantization by ZJU-AI4H</a>
-                                      <br><b>Time: </b> TBD
-                                      </li>
                                       <br>
                                       <li><b>Team:</b> BMI_DLUT
                                       <br><b>Title:</b> <a href="https://openreview.net/pdf?id=fbX9XN3qmS" style="color: black;"> Enhancing User Behavior Alignment by Input-Level Model Cooperation and Model-Level Parameter Optimization </a> 
-                                      <br><b>Time: </b> TBD
-                                      </li>                                                                            
+                                      <br><b>Time: </b> 15:00 - 15:15
+                                      </li>  
+                                     <br>
+                                      <li><b>Team:</b> ZJU_AI4H
+                                      <br><b>Title:</b> <a href="https://openreview.net/pdf?id=8x4In4No3q" style="color: black;"> EC-Guide: A Comprehensive E-Commerce Guide for Instruction Tuning and Quantization by ZJU-AI4H</a>
+                                      <br><b>Time: </b> 15:15 - 15:25 (Video)
+                                      </li>
+                                      <li><b>Team:</b> Innova
+                                      <br><b>Title:</b> <a href="https://openreview.net/pdf?id=0RXhLJnGxx" style="color: black;">Fine-Tuning Large Language Models for Multitasking in Online Shopping Using Synthetic Data </a> 
+                                      <br><b>Time: </b> 15:25 - 15:40
+                                      </li>
+                                      <li><b>Team:</b> CM_RLLM
+                                      <br><b>Title:</b> <a href="https://openreview.net/pdf?id=UfSqvcyUPJ" style="color: black;">Tailoring LLMs for Online Shopping: A Strategy for Multi-Task Learning and Domain-Specific Performance Enhancement </a> 
+                                      <br><b>Time: </b> 15:40 - 15:50 (Video)
+                                      </li>                               
                                     </ul>
                                   </p>
                                 </div>
@@ -220,7 +224,7 @@
                         <h2 style="text-align: center;">ACCEPTED PAPERS</h2>
                         <div class="list-group list-group-flush">
 				
-                          In total, we have accepted 9 submissions including 6 oral presentations and 3 poster presentationss. The accepted submission are publicly available at OpenReview page:  
+                          In total, we have accepted 9 submissions including 7 oral presentations and 2 poster presentationss. The accepted submission are publicly available at OpenReview page:  
                         <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup">https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup</a> 
                           
                             <a class="list-group-item list-group-item-action">
