--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                             published with the aim of encouraging the development of multilingual recommendation systems, which can enhance personalization and understanding of global trends and preferences.  
                             For each session, the dataset provides a list of product IDs (Amazon ASIN numbers) interacted by the current user, together with the additional product features.
                             More details of this challenge are available here: <a href="https://www.aicrowd.com/challenges/amazon-kdd-cup-23-multilingual-recommendation-challenge">[Challenge Link]</a>, <a href="https://arxiv.org/abs/2307.09688">[Dataset Paper Link]</a> and <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">[OpenReview Link]</a>.-->
-			The objective of this workshop is to discuss the winning solutions of the Amazon KDD Cup 2024: A Multi-task Online Shopping Challenge for LLMs. 
+			The objective of this workshop is to discuss the winning solutions of the Amazon KDD Cup 2024: A Multi-task Online Shopping Challenge for LLMs. In this challenge, we introduce the ShopBench dataset, a collection of questions written in natural language 
+			covering various aspects of knowledge in online shopping: Shopping Concept Understanding, Shopping Knowledge Reasoning, User Behavior Alignment, and Multi-lingual Abilities. 
                         <!-- </p> -->
                         <br>
                         </p>
