--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                             For each session, the dataset provides a list of product IDs (Amazon ASIN numbers) interacted by the current user, together with the additional product features.
                             More details of this challenge are available here: <a href="https://www.aicrowd.com/challenges/amazon-kdd-cup-23-multilingual-recommendation-challenge">[Challenge Link]</a>, <a href="https://arxiv.org/abs/2307.09688">[Dataset Paper Link]</a> and <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">[OpenReview Link]</a>.-->
 			The objective of this workshop is to discuss the winning solutions of the Amazon KDD Cup 2024: A Multi-task Online Shopping Challenge for LLMs. In this challenge, we introduce the ShopBench dataset, a collection of questions written in natural language 
-			covering various aspects of knowledge in online shopping: Shopping Concept Understanding, Shopping Knowledge Reasoning, User Behavior Alignment, and Multi-lingual Abilities. 
+			covering various aspects of knowledge in online shopping: Shopping Concept Understanding, Shopping Knowledge Reasoning, User Behavior Alignment, and Multi-lingual Abilities. The challenge is hosted with the aim of encouraging the development of a new paradigm 
+			to incorporate deep learning into online shopping --- conversational online shopping with LLMs. In this way, a versatile LLM, instead of task-specific models, is trained for a broad range of online shopping tasks to reduce task-specific engineering efforts. 
+			In addition, such an LLM can act as an interactive shop assistant that can provide real-time feedback to customer questions. More details of this challenge are available here: <a href="https://www.aicrowd.com/challenges/amazon-kdd-cup-2024-multi-task-online-shopping-challenge-for-llms">[Challenge Link]</a> and <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup">[OpenReview Link]</a>
                         <!-- </p> -->
                         <br>
                         </p>
