--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                         </div>
                         <div class="mt-5 col-sm-2">
                             <a class="navbar-brand js-scroll-trigger" href="https://https://amazon-kddcup24.github.io/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/default.jpeg" alt=""></span>
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/mao.jpg" alt=""></span>
                             <p style="text-align: center;">
                                 <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://amazon-kddcup24.github.io/"><b>Mao Li</b></a><br>
                             </p>                            
@@ -494,7 +494,7 @@
                         </div>
                         <div class="mt-5 col-sm-2">
                             <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=kX0CcGUAAAAJ&hl=en">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/default.jpeg" alt="Tianyu Cao"></span>
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/tianyu.jpg" alt="Tianyu Cao"></span>
                             <p style="text-align: center;">
                                 <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://scholar.google.com/citations?user=kX0CcGUAAAAJ&hl=en"><b>Tianyu Cao</b></a><br>
                             </p>                            
@@ -542,7 +542,7 @@
                         </div>
                	        <div class="mt-5 col-sm-2">
                             <a class="navbar-brand js-scroll-trigger" href="https://www.amazon.science/author/priyanka-nigam">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/default.jpeg" alt="Priyanka Nigam"></span>
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/priyanka.jpg" alt="Priyanka Nigam"></span>
                             <p style="text-align: center;">
                                 <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://www.amazon.science/author/priyanka-nigam"><b>Priyanka Nigam</b></a><br>
                             </p>                            
