--- a/index.html
+++ b/index.html
@@ -612,6 +612,14 @@
                             </p>                            
                             </a>
 			</div>
+                        <div class="mt-5 col-sm-2">
+                            <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=qSOxydEAAAAJ">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/trishul.jpg" alt="Trishul Chilimbi"></span>
+                            <p style="text-align: center;">
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://www.linkedin.com/in/trishul-chilimbi-9968024/"><b>Trishul Chilimbi</b></a><br>
+                            </p>                            
+                            </a>
+			</div>
                     </div>
                     </div>
                 </div>
