--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                     <ul>
                                       <li> <b>Team: </b> Team_NVIDIA
                                       <br> <b>Title</b>: <a href="https://openreview.net/pdf?id=sv0E1mBhu8" style="color: black;">Winning Amazon KDD Cup'24</a>  
-                                        <br><b>Time: </b> 14:00 - 14:25
+                                        <br><b>Time: </b> 14:00 - 14:25 <a href="https://github.com/amazon-kddcup24/amazon-kddcup24.github.io/blob/db741e34e70f35a435c3e166002b67fb53831606/slides/NVIDIA-KDD2024-Slides.pdf" style="color: black;"> Slides</a>
                                       </li>
                                     </ul>
                                   </p>
@@ -163,7 +163,7 @@
                                         <ul>
                                           <li><b>Team:</b> AML_LabCityU
                                           <br><b>Title:</b> <a href="https://openreview.net/pdf?id=OEjXPwR7aE" style="color: black;"> Second Place Overall Solution for Amazon KDD Cup 2024 </a>
-                                          <br><b>Time:</b> 14:25 - 14:50
+                                          <br><b>Time:</b> 14:25 - 14:50 
                                           </li>
                                         </ul>
                                     </p>
