--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                         <ul>
                                           <li><b>Team:</b> AML_LabCityU
                                           <br><b>Title:</b> <a href="https://openreview.net/pdf?id=OEjXPwR7aE" style="color: black;"> Second Place Overall Solution for Amazon KDD Cup 2024 </a>
-                                          <br><b>Time:</b> 14:25 - 14:50 
+                                          <br><b>Time:</b> 14:25 - 14:50 <a href="https://amazon-kddcup24.github.io/slides/AML_Lab@CityU Solution.pptx" style="color: black;"> Slides</a>
                                           </li>
                                         </ul>
                                     </p>
