--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                     <ul>
                                       <li><b>Team:</b> shimmering_as_the_stars
                                       <br><b>Title:</b> <a href="https://openreview.net/pdf?id=6cbeohZLxS" style="color: black;"> LLaSA: Large Language and E-Commerce Shopping Assistant </a> 
-                                      <br><b>Time:</b> 14:50 - 15:00 (Video)
+                                      <br><b>Time:</b> 14:50 - 15:00 <a href="https://drive.google.com/file/d/1T2Jkhzrr1OnwdpQsMcztb2rUd5Vt3p9n/view?usp=sharing" style="color: black;"> Video</a>
                                       </li>
                                       <br>
                                       <li><b>Team:</b> BMI_DLUT
