--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                       <br>
                                       <li><b>Team:</b> BMI_DLUT
                                       <br><b>Title:</b> <a href="https://openreview.net/pdf?id=fbX9XN3qmS" style="color: black;"> Enhancing User Behavior Alignment by Input-Level Model Cooperation and Model-Level Parameter Optimization </a> 
-                                      <br><b>Time: </b> 15:00 - 15:15
+                                      <br><b>Time: </b> 15:00 - 15:15 <a href="https://amazon-kddcup24.github.io/slides/BMI_DLUT_slides.pdf" style="color: black;"> Slides</a>
                                       </li>  
                                       <br>
                                       <li><b>Team:</b> ZJU_AI4H
