--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                       <br>
                                       <li><b>Team:</b> ZJU_AI4H
                                       <br><b>Title:</b> <a href="https://openreview.net/pdf?id=8x4In4No3q" style="color: black;"> EC-Guide: A Comprehensive E-Commerce Guide for Instruction Tuning and Quantization by ZJU-AI4H</a>
-                                      <br><b>Time: </b> 15:15 - 15:25 (Video)
+                                      <br><b>Time: </b> 15:15 - 15:25 <a href="https://drive.google.com/file/d/15m_S66YiyV-YBDEmokq6A3mKhaR0rb_h/view?usp=sharing" style="color: black;"> Video</a> <a href="https://amazon-kddcup24.github.io/slides/KDDCUP_2024_pre_ZJU_AI4H.pptx" style="color: black;"> Slides</a>
                                       </li>
 				      <br>
                                       <li><b>Team:</b> Innova
