--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				      <br>
                                       <li><b>Team:</b> Innova
                                       <br><b>Title:</b> <a href="https://openreview.net/pdf?id=0RXhLJnGxx" style="color: black;">Fine-Tuning Large Language Models for Multitasking in Online Shopping Using Synthetic Data </a> 
-                                      <br><b>Time: </b> 15:25 - 15:40
+                                      <br><b>Time: </b> 15:25 - 15:40 <a href="https://amazon-kddcup24.github.io/slides/WorkShop_KDD_2024_Barcelona_28Agosto_Innovateam_4thplace.pdf" style="color: black;"> Slides</a>
                                       </li>
 				      <br>
                                       <li><b>Team:</b> CM_RLLM
