--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 				      <br>
                                       <li><b>Team:</b> CM_RLLM
                                       <br><b>Title:</b> <a href="https://openreview.net/pdf?id=UfSqvcyUPJ" style="color: black;">Tailoring LLMs for Online Shopping: A Strategy for Multi-Task Learning and Domain-Specific Performance Enhancement </a> 
-                                      <br><b>Time: </b> 15:40 - 15:50 (Video)
+                                      <br><b>Time: </b> 15:40 - 15:50 <a href="https://drive.google.com/file/d/1GtCdq9cCb85HrIp8BntqjKiPi08B_x5E/view?usp=sharing" style="color: black;"> Video</a>
                                       </li>                               
                                     </ul>
                                   </p>
